Added Up Button for ColorsActivity, NumbersActivity, FamilyActivity and PhrasesActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,10 +29,26 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
     </activity>
-        <activity android:name=".NumbersActivity" android:label="Numbers"></activity>
-    <activity android:name=".PhrasesActivity" />
-    <activity android:name=".FamilyActivity" />
-    <activity android:name=".ColorsActivity"></activity>
+        <activity android:name=".NumbersActivity" android:label="Numbers">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity" />
+        </activity>
+        <activity android:name=".PhrasesActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity android:name=".FamilyActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity android:name=".ColorsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
 </application>
 
 </manifest>
