--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        applicationId "com.example.android.miwok"
+        applicationId "com.jerrychong.miwok"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
