--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
     android:label="@string/app_name"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
-    <activity android:name=".MainActivity">
+    <activity android:name="com.example.android.com.android.miwok.MainActivity">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
@@ -32,22 +32,22 @@
         <activity android:name=".NumbersActivity" android:label="Numbers">
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
-            android:value=".MainActivity" />
+            android:value="com.example.android.com.android.miwok.MainActivity" />
         </activity>
         <activity android:name=".PhrasesActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value="com.example.android.com.android.miwok.MainActivity" />
         </activity>
         <activity android:name=".FamilyActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value="com.example.android.com.android.miwok.MainActivity" />
         </activity>
         <activity android:name=".ColorsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value="com.example.android.com.android.miwok.MainActivity" />
         </activity>
 </application>
 
